--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 						</tr>
 					</tbody>
 				</table>
-
+				<span id="erro-ajax" class="invisivel">Erro ao buscar os pacientes</span>
+				<button id="buscar-pacientes" class="botao bto-principal">Buscar Pacientes</button>
 			</section>
 		</main>
 	</br>
@@ -104,5 +105,6 @@
 	<script src="js/form.js"></script>
 	<script src="js/remover-paciente.js"></script>
 	<script src="js/filtra.js" ></script>
+	<script src="js/buscar-pacientes.js" ></script>
 	</body>
 </html>
